# wallpaper-setter

./: Cargo.toml  README  README.md
src/: main.rs
src/utils/: mod.rs
