[package]
name = "wallpaper_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy_macro = "0.15.7"
home = "0.5.11"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
image = "0.25.6"
rand = "0.9.1"
reqwest = "0.12.15"
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
viuer = { version = "0.9.1", features = ["sixel"] }
